--- a/bower.json
+++ b/bower.json
@@ -20,5 +20,12 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "paper-toast": "Polymer/paper-toast#~0.5.5",
+    "paper-fab": "Polymer/paper-fab#~0.5.5",
+    "paper-input": "Polymer/paper-input#~0.5.5",
+    "paper-button": "Polymer/paper-button#~0.5.5",
+    "paper-checkbox": "Polymer/paper-checkbox#~0.5.5"
+  }
 }
